--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "private": true,
-"scripts": {
+  "scripts": {
     "watch:tailwind": "postcss public/tailwind.css -o public/index.css -w",
     "build:tailwind": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/index.css",
     "build": "npm run build:tailwind && rollup -c",
@@ -32,6 +32,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.1",
     "sirv-cli": "^2.0.0"
   }
 }
